# sidewalkautonomy

video_processing/: CHANGELOG.rst  CMakeLists.txt  get_vel_and_dir.py  package.xml
video_processing/config/: vm_analytics_node.json  whereiam_node.json
video_processing/include/: detection_decoder.h  funct_utils.h  object_tracker.h  opencv_predictor.h  person_analytics.h  predictor.h  ssd_decoder.h  tensor_rt_predictor.h  vm_analytics_utils.h  yolox_decoder.h  zbarqrdecoder.h
video_processing/launch/: VMAnalytics.launch  WhereIAm.launch
video_processing/src/: detection_decoder.cpp  funct_utils.cpp  object_tracker.cpp  opencv_predictor.cpp  person_analytics.cpp  ssd_decoder.cpp  tensor_rt_predictor.cpp  vm_analytics_node.cpp  vm_analytics_utils.cpp  whereiam_node.cpp  yolox_decoder.cpp  zbarqrdecoder.cpp
